--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,8 @@
     },
     "routes": [
         {
-            "routes": [
-                {
-                    "src": "/api/(.*)",
-                    "dest": "/api/$1"
-                }
-            ]
+            "src": "/api/(.*)",
+            "dest": "/api/server.js"
         }
     ]
 }
