--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "version": 2,
     "functions": {
-        "api/*.js": {
-            "runtime": "nodejs16.x"
+        "api/**/*.js": {
+            "runtime": "nodejs18.x"
         }
     },
     "routes": [
